--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         
-        <hr  size="2">
+        <hr  size="2" color="blue">
         <footer>
             <h2>Design By Faculty Emmma</h2>
             <h2>&copy; Create for CapacityBay</h2>
